# Python-BPF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: format.yml
demo/: bcc.py  clone-matplotlib.ipynb  pybpf.py  pybpf0.py  pybpf1.py  pybpf2.py  pybpf3.py  pybpf4.py
examples/: IO-run.ipynb  binops_demo.py  blk_request.py  check.sh  clone-matplotlib.ipynb  clone_plot.py  example.bpf.c  execve.py  execve2.py  execve3.py  execve4.py  execve5.py  hello_world.py  pybpf0.py  pybpf2.py  pybpf3.py  pybpf4.py  struct_and_perf.py  sys_sync.py  xdp_pass.py
examples/c-form/: Makefile  ex2.bpf.c  ex3-2.bpf.c  ex3.bpf.c  ex4.bpf.c  ex5.bpf.c  ex6.bpf.c  ex7.bpf.c  ex8.bpf.c  example.bpf.c  vmlinux.h
pythonbpf/: __init__.py  binary_ops.py  bpf_helper_handler.py  codegen.py  constants_pass.py  decorators.py  dwarf_constants.py  expr_pass.py  functions_pass.py  globals_pass.py  helpers.py  license_pass.py  maps.py  maps_pass.py  structs_pass.py  trace.py  type_deducer.py  unary_and_binary_ops.py
pythonbpf/debuginfo/: __init__.py  debug_info.py  debug_info_generator.py  dtypes.py  dwarf_constants.py
pythonbpf/helper/: __init__.py  bpf_helper_handler.py  helper_utils.py
pythonbpf/maps/: __init__.py  maps.py  maps_pass.py  maps_utils.py
pythonbpf/structs/: __init__.py  struct_type.py  structs_pass.py
tests/c-form/: Makefile  ex3-2.bpf.c  ex4.bpf.c  ex6.bpf.c  ex8.bpf.c  globals.bpf.c  ringbuf.bpf.c  vmlinux.h
tests/failing_tests/: binops.py  binops1.py  if.py  (+10 more)
tools/: check.sh  compile.py
(+6 files in other folders)
