[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbpf"
version = "0.1.0"
description = "Reduced Python frontend for eBPF"
authors = [
  { name = "r41k0u" },
  { name = "varun-r-mallya" }
]
requires-python = ">=3.8"

dependencies = [
  "llvmlite",
  "astpretty"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pythonbpf*"]
