[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbpf"
version = "0.1.0"
description = "Reduced Python frontend for eBPF"
authors = [
  { name = "r41k0u", email="pragyanshchaturvedi18@gmail.com" },
  { name = "varun-r-mallya", email="varunrmallya@gmail.com" }
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"

dependencies = [
  "llvmlite",
  "astpretty"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pythonbpf*"]
